--- a/inventory/group_vars/webgw/nginx/vars.yml
+++ b/inventory/group_vars/webgw/nginx/vars.yml
@@ -1,5 +1,7 @@
 ---
 
+# Debian uses a plain 'default' file
+nginx_provisioning_synced_patterns: ["*"]
 nginx_provisioning_synced_excludes:
   - "manual-*.conf"
   - "private-*.conf"
