Add hostname role to common_servers tasks

--- a/tasks/common_servers.yml
+++ b/tasks/common_servers.yml
@@ -58,6 +58,13 @@
   when: resolv_config | default('')
   tags: ["resolv"]
 
+- name: Setup hostname
+  ansible.builtin.include_role:
+    name: hostname
+    apply:
+      tags: ["hostname"]
+  tags: ["hostname"]
+
 - name: Setup systemd-networkd
   ansible.builtin.include_role:
     name: systemd_networkd
