--- a/inventory/group_vars/kvm_hv/firewall.yml
+++ b/inventory/group_vars/kvm_hv/firewall.yml
@@ -74,3 +74,7 @@ __firewall_rules_2:
   - port: "{{ node_exporter_port }}"
     zone: internal
     sources: "{{ node_exporter_allow_ips }}"
+
+  - port: "{{ smartctl_exporter_port }}"
+    zone: public
+    sources: "{{ node_exporter_allow_ips }}"
