--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -99,6 +99,9 @@ __extra_prometheus_scrape_configs:
       - targets: ["localhost:{{ pushgateway_port }}"]
         labels: "{{ prometheus_node_labels }}"
 
+  - job_name: "smartctl"
+    static_configs: "{{ __prom_smartctl_configs }}"
+
   - job_name: "syncthing"
     authorization:
       credentials: "{{ vault_syncthing_token }}"
