--- a/inventory/group_vars/servers/vars.yml
+++ b/inventory/group_vars/servers/vars.yml
@@ -32,3 +32,6 @@ my_user_pass: "{{ vault_my_user_pass }}"
 btrfs_root: "/mnt/btrfs_root"
 btrfs_opts: "compress=zstd:3,space_cache=v2"
 root_pass_hash: "{{ lookup('community.general.passwordstore', 'ansible/server_root_hash') }}"
+
+smartctl_exporter_address: "{{ host_ips.vm | default(ansible_host) }}"
+smartctl_exporter_port: 9902
