--- a/roles/nginx_exporter/tasks/install.yml
+++ b/roles/nginx_exporter/tasks/install.yml
@@ -1,54 +1,57 @@
 ---
-- name: get systemd version
-  command: systemctl --version
+- name: Get systemd version
+  ansible.builtin.command: systemctl --version
   changed_when: false
   check_mode: false
   register: __systemd_version
 
-- name: set systemd version fact
-  set_fact:
+- name: Set systemd version fact
+  ansible.builtin.set_fact:
     nginx_exporter_systemd_version: "{{ __systemd_version.stdout_lines[0].split(' ')[1] }}"
 
-- block:
-  - name: copy nginx_exporter sysusers file
-    template:
-      src: nginx_exporter.sysusers.j2
-      dest: /usr/lib/sysusers.d/nginx_exporter.conf
-      mode: 0644
-      owner: root
-      group: root
-    register: __sysusers
-
-  - name: restart systemd-sysusers
-    become: true
-    command: systemd-sysusers
-    when: __sysusers.changed
-
+- name: Setup users with sysusers
   when:
     - not nginx_exporter_no_sysusers
     - nginx_exporter_systemd_version | int >= 215
+  block:
+    - name: Copy nginx_exporter sysusers file
+      ansible.builtin.template:
+        src: nginx_exporter.sysusers.j2
+        dest: /usr/lib/sysusers.d/nginx_exporter.conf
+        mode: "0644"
+        owner: root
+        group: root
+      register: __sysusers
 
-- block:
-  - name: create nginx_exporter system group
-    group:
-      name: nginx_exporter
-      system: true
-      state: present
+    - name: Restart systemd-sysusers  # noqa no-changed-when no-handler
+      ansible.builtin.command: systemd-sysusers
+      when: __sysusers.changed
 
-  - name: create nginx_exporter system user
-    user:
-      name: nginx_exporter
-      system: true
-      shell: "/usr/sbin/nologin"
-      group: nginx_exporter
-      createhome: false
+- name: Setup exporter users
+  when: (nginx_exporter_no_sysusers) or (nginx_exporter_systemd_version | int < 215)
+  block:
+    - name: Create nginx_exporter system group
+      ansible.builtin.group:
+        name: nginx_exporter
+        system: true
+        state: present
 
-  when:
-    - (nginx_exporter_no_sysusers) or (nginx_exporter_systemd_version | int < 215)
+    - name: Create nginx_exporter system user
+      ansible.builtin.user:
+        name: nginx_exporter
+        system: true
+        shell: "/usr/sbin/nologin"
+        group: nginx_exporter
+        createhome: false
 
-- block:
+- name: Get latest release
+  when: nginx_exporter_version == "latest"
+  block:
     - name: Get latest release
-      uri:
+      become: false
+      delegate_to: localhost
+      run_once: true
+      ansible.builtin.uri:
         url: "https://api.github.com/repos/nginxinc/nginx-prometheus-exporter/releases/latest"
         method: GET
         return_content: true
@@ -57,30 +60,26 @@
         validate_certs: false
         user: "{{ lookup('env', 'GH_USER') | default(omit) }}"
         password: "{{ lookup('env', 'GH_TOKEN') | default(omit) }}"
-      no_log: "{{ not lookup('env', 'ANSIBLE_DEBUG') | bool }}"
       register: _latest_release
-      until: _latest_release.status == 200
+      until:
+        - _latest_release.status is defined
+        - _latest_release.status == 200
       retries: 5
       check_mode: false
 
     - name: "Set nginx-exporter version to {{ _latest_release.json.tag_name[1:] }}"
-      set_fact:
+      ansible.builtin.set_fact:
         nginx_exporter_version: "{{ _latest_release.json.tag_name[1:] }}"
-  when:
-    - nginx_exporter_version == "latest"
-
 
 - name: "Get checksum list"
-  set_fact:
-    __nginx_exporter_checksums: "{{ lookup('url', 'https://github.com/nginxinc/nginx-prometheus-exporter/releases/download/v' + nginx_exporter_version + '/sha256sums.txt', wantlist=True) | list }}"
-  run_once: true
-  check_mode: false
+  ansible.builtin.set_fact:
+    __nginx_exporter_checksums: "{{ lookup('url', 'https://github.com/nginxinc/nginx-prometheus-exporter/releases/download/v' + nginx_exporter_version + '/' + nginx_exporter_checksums_name, wantlist=True) | list }}"
 
-- name: download nginx_exporter binary to local folder
+- name: Download nginx_exporter binary to local folder
   become: false
-  get_url:
+  ansible.builtin.get_url:
     url: "https://github.com/nginxinc/nginx-prometheus-exporter/releases/download/v{{ nginx_exporter_version }}/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_{{ go_arch }}.tar.gz"
-    dest: "/tmp/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_{{ go_arch }}.tar.gz"
+    dest: "/tmp/{{ nginx_exporter_archive_name }}"
     checksum: "sha256:{{ (__nginx_exporter_checksums | select('search', 'linux_' + go_arch + '.tar.gz') | first).split()[0] }}"
   register: _download_archive
   until: _download_archive is succeeded
@@ -90,21 +89,30 @@
   delegate_to: localhost
   check_mode: false
 
-- name: unpack nginx_exporter binary
+- name: Create temporary dir
   become: false
-  unarchive:
-    src: "/tmp/nginx-prometheus-exporter_{{ nginx_exporter_version }}_linux_{{ go_arch }}.tar.gz"
-    dest: "/tmp"
-    creates: "/tmp/nginx-prometheus-exporter"
   delegate_to: localhost
   check_mode: false
+  ansible.builtin.file:
+    path: "/tmp/nginx-prometheus-exporter-{{ go_arch }}"
+    state: directory
+    mode: "0755"
 
-- name: propagate official nginx_exporter binary
-  copy:
-    src: "/tmp/nginx-prometheus-exporter"
+- name: Unpack nginx_exporter binary
+  become: false
+  delegate_to: localhost
+  check_mode: false
+  ansible.builtin.unarchive:
+    src: "/tmp/{{ nginx_exporter_archive_name }}"
+    dest: "/tmp/nginx-prometheus-exporter-{{ go_arch }}"
+    creates: "/tmp/nginx-prometheus-exporter-{{ go_arch }}/nginx-prometheus-exporter"
+
+- name: Propagate official nginx_exporter binary
+  ansible.builtin.copy:
+    src: "/tmp/nginx-prometheus-exporter-{{ go_arch }}/nginx-prometheus-exporter"
     dest: "{{ _nginx_exporter_binary_install_dir }}/nginx_exporter"
-    mode: 0755
+    mode: "0755"
     owner: root
     group: root
   notify:
-    - restart nginx_exporter
+    - Restart nginx_exporter
