--- a/inventory/host_vars/romsto/vars.yml
+++ b/inventory/host_vars/romsto/vars.yml
@@ -9,6 +9,7 @@ nextcloud_port: "25683"
 # Running in Docker
 node_exporter_installed: false
 nfs_idmapping_configure: false
+postfix_main_config: []
 
 prometheus_blackbox_http_targets:
   - "https://cloud.{{ domain }}/index.php/login"
