--- a/inventory/group_vars/rpi/promtail.yml
+++ b/inventory/group_vars/rpi/promtail.yml
@@ -1,6 +1,8 @@
 ---
 
 promtail_scrape_configs:
+  - "{{ __promtail_scrape_config_map['audit'] }}"
+  - "{{ __promtail_scrape_config_map['unattended_upgrades'] }}"
   - job_name: raspbian
     static_configs:
       - labels:
