--- a/inventory/group_vars/servers/auto-update.yml
+++ b/inventory/group_vars/servers/auto-update.yml
@@ -34,3 +34,6 @@ unattended_package_blacklist: >-
 unattended_remove_unused_dependencies: true
 unattended_remove_new_unused_dependencies: true
 unattended_automatic_reboot: false
+unattended_mail: "{{ my_email if postfix_main_config else false }}"
+unattended_mail_report: "{{ 'only-on-error' if postfix_main_config else false }}"
+unattended_mail_sender: "{{ inventory_hostname + '@' + domains['hb'] if postfix_main_config else false }}"
